fixed paragraph spacing

--- a/article1-thats-entertainment/style.css
+++ b/article1-thats-entertainment/style.css
@@ -78,10 +78,6 @@ h1{
 	
 }
 
-p{
-	padding: 20px 30px 30px 30px;
-}
-
 h2{
 	color: #592BFF;
 	font-size: 24px;
@@ -115,6 +111,9 @@ h2{
 
 p{
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	padding: 0px 30px 0px 30px;
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 /* .text-container{
